--- a/loading_spinner.css
+++ b/loading_spinner.css
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	background: var(--couleur1);
+	background:white;
 	width: 100%;
 	height: 50%;
 	position:absolute;
@@ -42,10 +42,10 @@
 	content:"";
 	width: 50px;
 	height: 50px;
-	border:10px solid var(--couleur5);
+	border:10px solid rgb(209, 205, 205);
 	border-top-color:var(--tertiaire);
 	border-right-color:var(--secondaire);
-	border-bottom-color:var(--couleur1);
+	border-bottom-color:white;
 	border-left-color:var(--primaire);
 	border-radius: 50%;
 	z-index: -2;
